# easy_rich

./: README.md
backend/: .uv.toml  GM_SERVICE.md  README.md  alembic.ini  demos.toml  main.py  main_app.py  main_prediction.py  main_task.py  migration_add_stock_detail_fields.sql  pyproject.toml  requirements.txt  test.py  test_gm_import.py  test_gm_sector.py  test_gm_sector2.py  test_gm_signature.py  test_merged_sector_api.py  test_single_prediction.py  test_tushare_import.py
backend/alembic/: env.py
backend/alembic/versions_dev/: 08e05a66c976_3_5_0.py  10e1a07627ef_3_5_0.py  145021461e7b_3_5_0.py  2ab2c04b18df_3_5_0.py  4154adce896b_3_5_0.py  44a70d26479d_3_5_0.py  493da3f35a56_3_5_0.py  4a5c8721405a_3_5_0.py  4c4fdb2a33b1_3_5_0.py  5027f1e1a667_3_5_0.py  51487e6d01f8_3_5_0.py  69da55ed84f0_3_5_0.py  797fec6bd239_3_5_0.py  8a40865d7548_3_5_0.py  8dc5780e2ea2_3_5_0.py  add_north_money_tables.py  baa138f781d0_3_5_0.py  bec631e3ca02_3_5_0.py  c0d8b7f78c47_3_5_0.py  d0c78740b2b0_3_5_0.py  d8839f2e60ec_3_5_0.py  dfa91a64e0c9_3_5_0.py  ff972c55eebc_3_5_0.py
backend/application/: settings.py  urls.py
backend/application/config/: constant.py  development.py  production.py
backend/apps/admin/analysis/: views.py
backend/apps/admin/auth/: login.py
backend/apps/admin/backtest/: __init__.py
backend/apps/admin/datasource/: akshare_api.py  technical_analysis.py  web_search.py  yfinance_api.py
backend/apps/admin/fund/: views.py
backend/apps/admin/help/: crud.py  views.py
backend/apps/admin/iot/: api.py  client.py  client_group.py  crud.py  device.py  product.py
backend/apps/admin/log/: action.py  api.py  login.py  operation.py  sms.py  task.py
backend/apps/admin/notification/: __init__.py  views.py
backend/apps/admin/portfolio/: views.py
backend/apps/admin/resource/: crud.py  views.py
backend/apps/admin/review/: views.py
backend/apps/admin/stock/: MERGED_SECTOR_API.md  SECTOR_ROTATION_API.md  ak_service.py  api.py  fund_flow.py  hot_news.py  llm_config.py  my_stock.py  news.py  sector_rotation_test.py  stock_analysis.py  stock_base.py  stock_board_concept.py  stock_board_industry.py  stock_composite_score.py  stock_daily_ranking.py  stock_factor.py  stock_fund_flow_api.py  stock_group_api.py  stock_index.py  stock_institution_api.py  stock_kline.py  stock_limit_up_api.py  stock_longhubang.py  stock_margin_api.py  stock_market_dashboard.py  stock_monitor_condition.py  stock_monitor_log.py  stock_monitor_strategy.py  stock_prediction.py  (+4 more)
backend/apps/module_task/: __init__.py  ak_service.py  db.py  notification_scheduler.py  ranking_service.py  scheduler.py  stock_service_client.py  task_service.py
backend/core/: ap_scheduler.py  crud.py  data_types.py  database.py  dependencies.py  docs.py  event.py  exception.py  logger.py  loggerold.py  middleware.py  mongo_manage.py  validator.py
backend/db/: db_base.py
backend/docs/: architecture_topology.md  hot_news_plan.md
backend/qmt-service/: pyproject.toml  run.py
backend/qmt-service/app/: main.py
backend/scripts/: add_cloud_map_menu.py  add_fund_menu.py  add_missing_menus.py  add_review_menu.py  check_menus.py  fix_menu_component.py  restructure_stock_menus.py
backend/scripts/create_app/: main.py
backend/scripts/initialize/: initialize.py
backend/scripts/sql/: add_missing_menus.sql  add_stock_menus.sql  init_sync_tasks.sql  notification_tables.sql  restructure_stock_menus.sql
backend/services/: __init__.py  prediction_service.py  stock_service.py
backend/sql/: akshare_menu.sql
backend/static/dist-pro/: index.html
backend/static/redoc_ui/: redoc.standalone.js
backend/static/swagger_ui/: swagger-ui-bundle.js  swagger-ui.css
backend/stock-service/: run.py  test_akshare.py  test_network.py
backend/stock-service/app/: main.py
backend/stock_analysis/: .akshare_stock.conf.example  .gitignore  CHANGELOG.md  README.md  build.py  build_executable.ps1  build_gui.py  config.example.toml  requirements.txt  stock_analyze.py  stock_analyze.spec  stock_analyze_gui.py  stock_analyze_gui.spec
backend/stock_analysis/docs/: example.md  scoring_algorithm.md
backend/stock_analysis/modules/: ai_analyzer.py  chart_generator.py  constants.py  data_sources.py  minute_analyzer.py  news_analyzer.py  scoring.py  technical_indicators.py  utils.py
backend/utils/: ai_util.py  akshare_enhanced.py  cache.py  cron_util.py  db_getter.py  emqx.py  ip_manage.py  jinja2_template_util.py  kexin.py  mqtt_client.py  mqtt_send.py  re_util.py  send_email.py  socket_server.py  stock.py  tools.py
backend/utils/excel/: excel_manage.py  import_manage.py  write_xlsx.py
backend/utils/file/: file_base.py  file_manage.py  file_upload.py
backend/utils/sms/: aliyun.py  code.py  code_manager.py  reset_passwd.py
backend/utils/wx/: oauth.py  wx_access_token.py
(+1120 files in other folders)
