[project]
name = "easy-rich-backend"
version = "1.4.0"
description = "Easy Rich 股票量化分析系统 - 后端服务"
authors = [
    {name = "Shawn Sang", email = "shawn.sang@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiofiles==0.7.0",
    "aiohttp==3.9.1",
    "aioredis==2.0.1",
    "aioshutil==1.3",
    "aiosignal==1.3.1",
    "akshare>=1.16.75,<2.0.0",
    "akshare-proxy-patch==0.2.8",
    "alembic==1.8.1",
    "alibabacloud-dysmsapi20170525==2.0.22",
    "alibabacloud-tea==0.3.0",
    "alibabacloud_credentials==0.3.0",
    "alibabacloud_endpoint_util==0.0.3",
    "alibabacloud_gateway_spi==0.0.1",
    "alibabacloud_openapi_util==0.2.0",
    "alibabacloud_tea_openapi==0.3.6",
    "alibabacloud_tea_util==0.3.8",
    "alibabacloud_tea_xml==0.0.2",
    "aliyun-python-sdk-core==2.13.36",
    "aliyun-python-sdk-kms==2.16.0",
    "annotated-types>=0.6.0",
    "anyio>=4.9.0",
    "apscheduler>=3.11.2,<4.0.0",
    "asgiref==3.5.2",
    "async-timeout>=4.0.3",
    "asyncmy==0.2.8",
    "attrs>=23.1.0",
    "bcrypt>=4.0.0",
    "beautifulsoup4>=4.9.1",
    "certifi>=2024.2.2",
    "cffi>=1.17.0",
    "charset-normalizer==2.1.1",
    "click>=8.1.3",
    "colorama==0.4.6",
    "comtypes==1.2.0",
    "crcmod==1.7",
    "cryptography>=41.0.0",
    "dnspython==2.2.1",
    "ecdsa==0.18.0",
    "einops",
    "et-xmlfile==1.1.0",
    "exceptiongroup==1.1.3",
    "fastapi>=0.115.12,<0.116.0",
    "frozenlist==1.4.1",
    "gm>=3.0.183",
    "gmqtt==0.6.14",
    "greenlet==3.0.3",
    "gunicorn==20.1.0",
    "h11>=0.14.0",
    "huggingface_hub",
    "httptools==0.6.1",
    "idna==3.4",
    "importlib-metadata==5.0.0",
    "importlib-resources==5.10.0",
    "jmespath==0.10.0",
    "loguru>=0.7.3,<0.8.0",
    "Mako==1.2.4",
    "MarkupSafe==2.1.1",
    "motor==3.1.1",
    "multidict",
    "numpy>=1.24.0",
    "openai==0.27.4",
    "openpyxl==3.0.10",
    "orjson==3.9.10",
    "oss2==2.18.4",
    "paho-mqtt==2.0.0",
    "passlib==1.7.4",
    "pathlib==1.0.1",
    "pillow==10.2.0",
    "pyasn1==0.4.8",
    "pycparser==2.21",
    "pycryptodome==3.20.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "pydantic_core",
    "PyJWT==2.6.0",
    "pymongo==4.3.3",
    "PyMySQL==1.0.2",
    "python-dotenv>=1.1.0,<2.0.0",
    "python-multipart==0.0.5",
    "pywin32==306",
    "PyYAML==6.0.1",
    "redis>=5.2.1,<6.0.0",
    "requests==2.31.0",
    "rsa==4.9",
    "safetensors==0.4.5",
    "setuptools>=69.0.3",
    "six==1.16.0",
    "sniffio==1.3.0",
    "SQLAlchemy==2.0.20",
    "SQLAlchemy-Utils==0.38.3",
    "SSIM-PIL==1.0.14",
    "soupsieve>=1.6.1",
    "starlette>=0.30.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0,<0.20.0",
    "tqdm==4.65.0",
    "tushare>=1.4.0,<2.0.0",
    "typer==0.7.0",
    "typing_extensions>=4.10.0",
    "tzlocal>=3.0",
    "ua-parser==0.16.1",
    "urllib3==1.26.12",
    "user-agents==2.2.0",
    "uvicorn>=0.34.0,<0.35.0",
    "websockets==10.4",
    "win32-setctime==1.1.0",
    "XlsxWriter==3.0.3",
    "yarl==1.9.4",
    "zipp==3.10.0",
    "zope.event==4.5.0",
    "zope.interface==5.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.26.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.26.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "anyio>=4.9.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "twisted>=24.11.0",
]

[tool.uv.sources]
# Aliyun mirror configured via uv pip config
# Run: uv pip config set global.index-url https://mirrors.aliyun.com/pypi/simple/

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "akshare.*",
    "pandas.*",
    "numpy.*",
    "gm.*",
]
ignore_missing_imports = true
